<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/text_alert"
                android:text="@string/sure_text"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:padding="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <Button
                android:id="@+id/conf_no_button"
                android:text="@string/no_text"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </Button>

            <Button
                android:id="@+id/conf_yes_button"
                android:text="@string/yes_text"
                android:layout_alignParentEnd="true"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_marginTop="60dp"
                android:layout_marginRight="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </Button>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>